--- a/content/blog/2020-06-19-is-bigfoot-a-republican/index.Rmd
+++ b/content/blog/2020-06-19-is-bigfoot-a-republican/index.Rmd
@@ -21,9 +21,23 @@ keywords:
 library(knitr)
 library(kableExtra)
 
+options(kableExtra.html.bsTable = T)
+
 kable <- function(data, digits = 2, ...) {
-  knitr::kable(data, digits = digits, ...) %>% 
-    kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), ...)
+  knitr::kable(
+    data, 
+    digits = digits, 
+    escape = F, 
+    align = "c", 
+    booktabs = T,
+    ...
+  ) %>% 
+    kable_styling(
+      bootstrap_options = c("striped", "hover", "condensed", "responsive"), 
+      latex_options = "striped", 
+      full_width = F,
+      ...
+    )
 }
 
 opts_chunk$set(
