--- a/content/blog/2020-06-19-is-bigfoot-a-republican/index.Rmd
+++ b/content/blog/2020-06-19-is-bigfoot-a-republican/index.Rmd
@@ -42,7 +42,11 @@ kable <- function(data, digits = 2, ...) {
 
 opts_chunk$set(
   echo = TRUE,
-  message = FALSE)
+  message = FALSE, 
+  warning = FALSE,
+  fig.width = 8,
+  fig.height = 8,
+  fig.align = "center")
 
 ```
 
