--- a/content/blog/2020-06-23-is-bigfoot-a-republican/index.Rmd
+++ b/content/blog/2020-06-23-is-bigfoot-a-republican/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Is Bigfoot a Republican?
 author: Auggie Heschmeyer
-date: '2020-06-19'
+date: '2020-06-23'
 slug: is-bigfoot-a-republican
 tags:
 - just for fun
@@ -227,7 +227,7 @@ sightings_by_county_tbl %>%
 
 Now this is a twist! Perhaps Bigfoot isn't a Republican after all, but a Democrat! 
 
-This may be an unexpected difference, but is it a statistically significant difference? Let's use the `infer` package to do a statistical tests and be sure.
+This may be an unexpected difference, but is it a statistically significant difference? Let's use the `infer` package to do a statistical test and be sure.
 
 ```{r}
 
@@ -242,7 +242,7 @@ t_test_tbl %>%
 
 ```
 
-So it is significant! Check the p-value lower than the standard threshold of 0.05. It looks like the 95% confidence interval for our test shows that the difference in sightings ranges from about .12 to 1 more on average per county.
+So it is significant! Check the p-value that is lower than the standard threshold of 0.05. It looks like the 95% confidence interval for our test shows that the difference in sightings ranges from about 0.13 to 1 more on average per county.
 
 ### What proportion of those counties had a Bigfoot sighting?
 
@@ -273,7 +273,7 @@ sightings_by_county_tbl %>%
 
 ```
 
-Interesting. Despite having a more sightings in Clinton counties, it looks like Bigfoot is just as present in Trump counties. How do I rectify this with the results of the test that showed Clinton counties with more average sightings? Has Bigfoot been going on vacation to Democratic counties and been spotted there over and over again? Maybe a map showing the sightings will help me sort things out.
+Interesting. Despite having a more sightings in Clinton counties, it looks like Bigfoot is just as present in Trump counties. How do we rectify this with the results of the test that showed Clinton counties with more average sightings? Has Bigfoot been going on vacation to Democratic counties and been spotted there over and over again? Maybe a map showing the sightings will help us sort things out.
 
 ## How does geographic location impact Bigfoot sightings and election results?
 
@@ -303,10 +303,10 @@ lat_long_tbl %>%
     color = 'grey',
     show.legend = FALSE
   ) +
-  geom_jitter(aes(size = sightings), alpha = .2) +
+  geom_jitter(aes(size = sightings), alpha = 0.2) +
   theme_tq() +
   scale_color_tq() +
-  labs(title = "Bigfoot sightings mostly occur in sparsely populated, rural areas areas Trump won",
+  labs(title = "Bigfoot sightings mostly occur in sparsely populated, rural areas: Trump country",
        x = "",
        y = "",
        color = "",
@@ -315,16 +315,16 @@ lat_long_tbl %>%
     axis.text = element_blank(),
     legend.text = element_text(size = 15),
     line = element_blank(),
-    plot.title = element_text(hjust = .5),
-    plot.subtitle = element_text(hjust = .5),
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
     rect = element_blank()
   )
 
 ```
 
-This definitely clears things up. Trump won a lot of sparsely-populated, rural counties throughout the US. "Sparsely-populated and rural" sounds a lot like places Bigfoot may want to live. All of those red dots represent Bigfoot sightings in Trump counties and most of them aren't near any major metropolis. The blue dots, however, do seem to be centered around those metropolises. This supports my theory that perhaps, like the rest of us, Bigfoot enjoys visiting the city and given how many people there are in the city, the chances of him/her being spotted by more people goes way up.
+This definitely clears things up. Trump won a lot of sparsely-populated, rural counties throughout the US. "Sparsely-populated and rural" sounds a lot like places Bigfoot may want to live. All of those red dots represent Bigfoot sightings in Trump counties and, while it's hard to see on this map, a lot of them aren't near any major metropolis. The blue dots, however, do seem to be centered around those metropolises. This supports my theory that perhaps, like most of us, Bigfoot enjoys visiting the city and given how many people there are in the city, the chances of him/her being spotted by more people goes way up.
 
 ## In Conclusion
-So, is Bigfoot a Republican? While I may have had a lot of fun playing around with this data, I don't think I can definitively make that call. Given that he lives in rural, Trump-leaning counties, it seems like a safe assumption, though. Or maybe Bigfoot is a Democrat, but just can't afford rent in the city. Perhaps we'll see Bigfeet of the US unite and vote for a third-party candidate!
+So, is Bigfoot a Republican? While I may have had a lot of fun playing around with this data, I don't think I can definitively make that call. Given that he lives in rural, Trump-leaning counties, it seems like a safe assumption, though. Or maybe Bigfoot is a Democrat, but just can't afford rent in the city. Perhaps we'll even see Bigfeet of the US unite and vote for a third-party candidate!
 
 Thanks for walking through this analysis with me. You can find all of the data and code related to this analysis in [this GitHub repo](https://github.com/realauggieheschmeyer/is_bigfoot_a_republican). Feel free to reach out to on [LinkedIn](https://www.linkedin.com/in/auggieheschmeyer/) or [Twitter](https://twitter.com/realauggiehesch). Happy analyzing!
