--- a/content/blog/2020-06-23-is-bigfoot-a-republican/index.Rmd
+++ b/content/blog/2020-06-23-is-bigfoot-a-republican/index.Rmd
@@ -325,6 +325,7 @@ lat_long_tbl %>%
 This definitely clears things up. Trump won a lot of sparsely-populated, rural counties throughout the US. "Sparsely-populated and rural" sounds a lot like places Bigfoot may want to live. All of those red dots represent Bigfoot sightings in Trump counties and, while it's hard to see on this map, a lot of them aren't near any major metropolis. The blue dots, however, do seem to be centered around those metropolises. This supports my theory that perhaps, like most of us, Bigfoot enjoys visiting the city and given how many people there are in the city, the chances of him/her being spotted by more people goes way up.
 
 ## In Conclusion
+
 So, is Bigfoot a Republican? While I may have had a lot of fun playing around with this data, I don't think I can definitively make that call. Given that he lives in rural, Trump-leaning counties, it seems like a safe assumption, though. Or maybe Bigfoot is a Democrat, but just can't afford rent in the city. Perhaps we'll even see Bigfeet of the US unite and vote for a third-party candidate!
 
-Thanks for walking through this analysis with me. You can find all of the data and code related to this analysis in [this GitHub repo](https://github.com/realauggieheschmeyer/is_bigfoot_a_republican). Feel free to reach out to on [LinkedIn](https://www.linkedin.com/in/auggieheschmeyer/) or [Twitter](https://twitter.com/realauggiehesch). Happy analyzing!
+Thanks for walking through this analysis with me. You can find all of the data and code related to this analysis in [this GitHub repo](https://github.com/realauggieheschmeyer/is_bigfoot_a_republican). Feel free to reach out to me on [LinkedIn](https://www.linkedin.com/in/auggieheschmeyer/) or [Twitter](https://twitter.com/realauggiehesch). Happy analyzing!
